--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,3 +1,27 @@
 ---
-application.js: application-0cadab65de06f8409a8a05bbc580433a.js
-application.css: application-a2c7362f1bc7f5efd5c30dfbdf674590.css
+application.js: application-91b315a8b9131bf773ed4bfaf625ac69.js
+application/index.js: application-91b315a8b9131bf773ed4bfaf625ac69.js
+application.css: application-bb57b78d45af35e26de76f459948415c.css
+application/index.css: application-bb57b78d45af35e26de76f459948415c.css
+bootstrap/grunt/configBridge.json: bootstrap/grunt/configBridge-e23201170d4ff8bd17718a2a40ffceb9.json
+bootstrap/grunt/configBridge/index.json: bootstrap/grunt/configBridge-e23201170d4ff8bd17718a2a40ffceb9.json
+bootstrap/dist/fonts/glyphicons-halflings-regular.eot: bootstrap/dist/fonts/glyphicons-halflings-regular-a2d14623de76773922e04feabbb8f1ec.eot
+bootstrap/dist/fonts/glyphicons-halflings-regular/index.eot: bootstrap/dist/fonts/glyphicons-halflings-regular-a2d14623de76773922e04feabbb8f1ec.eot
+bootstrap/dist/fonts/glyphicons-halflings-regular.svg: bootstrap/dist/fonts/glyphicons-halflings-regular-f11e590a97a9590d9443aee75459169a.svg
+bootstrap/dist/fonts/glyphicons-halflings-regular/index.svg: bootstrap/dist/fonts/glyphicons-halflings-regular-f11e590a97a9590d9443aee75459169a.svg
+bootstrap/dist/fonts/glyphicons-halflings-regular.ttf: bootstrap/dist/fonts/glyphicons-halflings-regular-a155b51a479851a6caeebb27487db31a.ttf
+bootstrap/dist/fonts/glyphicons-halflings-regular/index.ttf: bootstrap/dist/fonts/glyphicons-halflings-regular-a155b51a479851a6caeebb27487db31a.ttf
+bootstrap/dist/fonts/glyphicons-halflings-regular.woff: bootstrap/dist/fonts/glyphicons-halflings-regular-9c652c2051929e3456994f25f2232095.woff
+bootstrap/dist/fonts/glyphicons-halflings-regular/index.woff: bootstrap/dist/fonts/glyphicons-halflings-regular-9c652c2051929e3456994f25f2232095.woff
+bootstrap/dist/fonts/glyphicons-halflings-regular.woff2: bootstrap/dist/fonts/glyphicons-halflings-regular-11d822f2e98af4619e6e714ad5ebe6a8.woff2
+bootstrap/dist/fonts/glyphicons-halflings-regular/index.woff2: bootstrap/dist/fonts/glyphicons-halflings-regular-11d822f2e98af4619e6e714ad5ebe6a8.woff2
+bootstrap/fonts/glyphicons-halflings-regular.eot: bootstrap/fonts/glyphicons-halflings-regular-a2d14623de76773922e04feabbb8f1ec.eot
+bootstrap/fonts/glyphicons-halflings-regular/index.eot: bootstrap/fonts/glyphicons-halflings-regular-a2d14623de76773922e04feabbb8f1ec.eot
+bootstrap/fonts/glyphicons-halflings-regular.svg: bootstrap/fonts/glyphicons-halflings-regular-f11e590a97a9590d9443aee75459169a.svg
+bootstrap/fonts/glyphicons-halflings-regular/index.svg: bootstrap/fonts/glyphicons-halflings-regular-f11e590a97a9590d9443aee75459169a.svg
+bootstrap/fonts/glyphicons-halflings-regular.ttf: bootstrap/fonts/glyphicons-halflings-regular-a155b51a479851a6caeebb27487db31a.ttf
+bootstrap/fonts/glyphicons-halflings-regular/index.ttf: bootstrap/fonts/glyphicons-halflings-regular-a155b51a479851a6caeebb27487db31a.ttf
+bootstrap/fonts/glyphicons-halflings-regular.woff: bootstrap/fonts/glyphicons-halflings-regular-9c652c2051929e3456994f25f2232095.woff
+bootstrap/fonts/glyphicons-halflings-regular/index.woff: bootstrap/fonts/glyphicons-halflings-regular-9c652c2051929e3456994f25f2232095.woff
+bootstrap/fonts/glyphicons-halflings-regular.woff2: bootstrap/fonts/glyphicons-halflings-regular-11d822f2e98af4619e6e714ad5ebe6a8.woff2
+bootstrap/fonts/glyphicons-halflings-regular/index.woff2: bootstrap/fonts/glyphicons-halflings-regular-11d822f2e98af4619e6e714ad5ebe6a8.woff2
