restructured asset pipeline, and compiled for heroku deploy (and config for haml)

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,8 +1,8 @@
 ---
-application.js: application-91b315a8b9131bf773ed4bfaf625ac69.js
-application/index.js: application-91b315a8b9131bf773ed4bfaf625ac69.js
-application.css: application-bb57b78d45af35e26de76f459948415c.css
-application/index.css: application-bb57b78d45af35e26de76f459948415c.css
+application.js: application-29542248dae8df741727d25c6194c599.js
+application/index.js: application-29542248dae8df741727d25c6194c599.js
+application.css: application-fdc578abdce53a79eac0b75ec207648e.css
+application/index.css: application-fdc578abdce53a79eac0b75ec207648e.css
 bootstrap/grunt/configBridge.json: bootstrap/grunt/configBridge-e23201170d4ff8bd17718a2a40ffceb9.json
 bootstrap/grunt/configBridge/index.json: bootstrap/grunt/configBridge-e23201170d4ff8bd17718a2a40ffceb9.json
 bootstrap/dist/fonts/glyphicons-halflings-regular.eot: bootstrap/dist/fonts/glyphicons-halflings-regular-a2d14623de76773922e04feabbb8f1ec.eot
@@ -25,3 +25,7 @@ bootstrap/fonts/glyphicons-halflings-regular.woff: bootstrap/fonts/glyphicons-ha
 bootstrap/fonts/glyphicons-halflings-regular/index.woff: bootstrap/fonts/glyphicons-halflings-regular-9c652c2051929e3456994f25f2232095.woff
 bootstrap/fonts/glyphicons-halflings-regular.woff2: bootstrap/fonts/glyphicons-halflings-regular-11d822f2e98af4619e6e714ad5ebe6a8.woff2
 bootstrap/fonts/glyphicons-halflings-regular/index.woff2: bootstrap/fonts/glyphicons-halflings-regular-11d822f2e98af4619e6e714ad5ebe6a8.woff2
+bootstrap.js: bootstrap-2815d800457eb4ea1ecffddf98f8f54f.js
+bootstrap/index.js: bootstrap-2815d800457eb4ea1ecffddf98f8f54f.js
+bootstrap.css: bootstrap-bb57b78d45af35e26de76f459948415c.css
+bootstrap/index.css: bootstrap-bb57b78d45af35e26de76f459948415c.css
