--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -3,6 +3,8 @@ application.js: application-29542248dae8df741727d25c6194c599.js
 application/index.js: application-29542248dae8df741727d25c6194c599.js
 application.css: application-fdc578abdce53a79eac0b75ec207648e.css
 application/index.css: application-fdc578abdce53a79eac0b75ec207648e.css
+pages.css: pages-7bf91c2ef662e7b41e40000b8bf34496.css
+pages/index.css: pages-7bf91c2ef662e7b41e40000b8bf34496.css
 bootstrap/grunt/configBridge.json: bootstrap/grunt/configBridge-e23201170d4ff8bd17718a2a40ffceb9.json
 bootstrap/grunt/configBridge/index.json: bootstrap/grunt/configBridge-e23201170d4ff8bd17718a2a40ffceb9.json
 bootstrap/dist/fonts/glyphicons-halflings-regular.eot: bootstrap/dist/fonts/glyphicons-halflings-regular-a2d14623de76773922e04feabbb8f1ec.eot
