looks like I did some minor terraform changes

--- a/terraform/Makefile
+++ b/terraform/Makefile
@@ -14,6 +14,11 @@ import:
   -var 'secret_key=${HOBBY_AWS_SECRET_ACCESS_KEY}'
 
 
+destroy:
+	@terraform destroy \
+  -var 'access_key=${HOBBY_AWS_ACCESS_KEY_ID}' \
+  -var 'secret_key=${HOBBY_AWS_SECRET_ACCESS_KEY}' \
+  -target=aws_s3_bucket.personal_site_redirect
 
 
 .PHONY: *
